kubernetes/monitoring/ingress-template.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-$REGION
  annotations: 
    kubernetes.io/ingress.class: traefik
    # # add an annotation indicating the SSL cert issuer to use.
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana-$REGION.home.techfitsu.org`)
      kind: Rule
      services:
        - name: grafana
          port: 80
          sticky:
            cookie:
              httpOnly: true
              name: grafana
              secure: true
              sameSite: none
  tls:
    secretName: home-production-tls
    

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: alertmanager-$REGION
  annotations: 
    kubernetes.io/ingress.class: traefik
    # # add an annotation indicating the SSL cert issuer to use.
    # cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`alertmanager-$REGION.home.techfitsu.org`)
      kind: Rule
      services:
        - name: alertmanager-operated
          port: 9093
          
  tls:
    secretName: home-production-tls
